--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -7,10 +7,6 @@
 services:
   database:
     image: "postgres:16.0-alpine3.18"
-    # Variaveis de ambiente que serão passadas para o banco
-    # environment:
-    #   POSTGRES_PASSWORD: "local_password"
-    # Ao invés de passar variáveis de ambiente aqui no compose, vamos utilizar o arquivo de variáveis de ambiente para que o compose leia-o
-    env_file: ../.env
+    env_file: ../.env.development
     ports:
       - "5432:5432"
