restore local information in ´.env.development´

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-POSTGRES_HOST=ep-jolly-river-a5cmu6nu.us-east-2.aws.neon.tech
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_DB=clonetabnews
-POSTGRES_USER=clonetabnews_owner
-POSTGRES_PASSWORD=f6uFbrA2ojzv
+POSTGRES_DB=local_db
+POSTGRES_USER=local_user
+POSTGRES_PASSWORD=local_password
